force-app/main/default/objects/Purchase_Order__c/fields/Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Code__c</fullName>
    <formula>Supplier__r.Pronto_Account_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Code</label>
    <type>Text</type>
</CustomField>