force-app/main/default/objects/Purchase_Order__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>CreatedBy.Company_Code__c</formula>
    <label>Company</label>
    <type>Text</type>
</CustomField>