force-app/main/default/objects/Purchase_Order__c/fields/Delivery_Address_Name__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Address_Name__c</fullName>
    <label>Delivery Address Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>