force-app/main/default/objects/Purchase_Order__c/fields/Line_of_Business_Code__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business_Code__c</fullName>
    <formula>CreatedBy.Line_of_Business_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line of Business Code</label>
    <type>Text</type>
</CustomField>