force-app/main/default/objects/Purchase_Order__c/fields/Postal_City__c.field-meta.xml
<CustomField>
    <fullName>Postal_City__c</fullName>
    <label>Postal City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>