force-app/main/default/objects/Purchase_Order__c/fields/Postal_Country__c.field-meta.xml
<CustomField>
    <fullName>Postal_Country__c</fullName>
    <label>Postal Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>