force-app/main/default/objects/Purchase_Order__c/fields/Postal_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Postal_Postcode__c</fullName>
    <label>Postal Postcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>