force-app/main/default/objects/Purchase_Order__c/fields/Postal_State__c.field-meta.xml
<CustomField>
    <fullName>Postal_State__c</fullName>
    <label>Postal State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>