force-app/main/default/objects/Purchase_Order__c/fields/Postal_Street__c.field-meta.xml
<CustomField>
    <fullName>Postal_Street__c</fullName>
    <label>Postal Street</label>
    <length>50</length>
    <type>Text</type>
</CustomField>