force-app/main/default/objects/Purchase_Order__c/fields/Pronto_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Pronto_PO_Number__c</fullName>
    <externalId>true</externalId>
    <label>Pronto PO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>