force-app/main/default/objects/Purchase_Order__c/fields/SC_Project_Code__c.field-meta.xml
<CustomField>
    <fullName>SC_Project_Code__c</fullName>
    <label>Project Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>