force-app/main/default/objects/Purchase_Order__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MAT</fullName>
                <label>Materials</label>
            </value>
            <value>
                <fullName>SUB</fullName>
                <label>Subcontrator</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>