force-app/main/default/objects/Purchase_Order__c/fields/Warehouse_Code__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Code__c</fullName>
    <label>Warehouse Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Warehouse</valueSetName>
    </valueSet>
</CustomField>