force-app/main/default/objects/Purchase_Order__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>WorkOrder.Status</field>
            <operation>notEqual</operation>
            <value>Completed, Awaiting Customer PO, Ready To Invoice</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>