force-app/main/default/objects/Purchase_Order__c/recordTypes/InternalGroupLabour_PurchaseOrder_RT.recordType-meta.xml
<RecordType>
    <fullName>InternalGroupLabour_PurchaseOrder_RT</fullName>
    <active>true</active>
    <label>Internal Group Labour</label>
</RecordType>