force-app/main/default/objects/Purchase_Order__c/recordTypes/Supplier_PurchaseOrder_RT.recordType-meta.xml
<RecordType>
    <fullName>Supplier_PurchaseOrder_RT</fullName>
    <active>true</active>
    <label>Supplier</label>
</RecordType>