force-app/main/default/objects/Purchase_Order__c/validationRules/VR_POR01_RecordLocked.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_POR01_RecordLocked</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp;  
NOT(ISCHANGED(Integration_Status__c)) &amp;&amp;
ISPICKVAL(Integration_Status__c, &#39;Waiting Confirmation&#39;) &amp;&amp;
(NOT(ISCHANGED(Status__c)) &amp;&amp; ISPICKVAL(Status__c, &#39;Cancelled&#39;))</errorConditionFormula>
    <errorMessage>The record cannot be updated as it is integrated with Pronto</errorMessage>
</ValidationRule>