force-app/main/default/objects/Purchase_Order__c/validationRules/VR_POR02_CancellationReason.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_POR02_CancellationReason</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c , &#39;Cancelled&#39;) &amp;&amp; ISBLANK( Cancellation_Reason__c )</errorConditionFormula>
    <errorDisplayField>Cancellation_Reason__c</errorDisplayField>
    <errorMessage>This field is mandatory when Status = Cancelled</errorMessage>
</ValidationRule>