force-app/main/default/objects/Purchase_Order__c/validationRules/VR_POR03_CannotCancel.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_POR03_CannotCancel</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, &#39;Cancelled&#39;) &amp;&amp; ISCHANGED(Status__c) &amp;&amp;  (ISPICKVAL(Work_Order__r.Sales_Order__r.Integration_Status__c, &#39;Successful&#39;) || ISPICKVAL(Work_Order__r.Sales_Order__r.Integration_Status__c, &#39;Waiting Confirmation&#39;))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You cannot cancel a PO when Work Order&#39;s related  Sales Order is integrated with Pronto</errorMessage>
</ValidationRule>