force-app/main/default/objects/Purchase_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Supplier__c</columns>
    <columns>Work_Order__c</columns>
    <columns>Service_Territory__c</columns>
    <columns>Total__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>